--- a/tablas.html
+++ b/tablas.html
@@ -67,12 +67,17 @@
 
 
         </main>
-        <aside>
-            <p>a</p>
-        </aside>
     </div>
     <footer>
-        <p>a</p>
+        <div style="display: flex; justify-content: space-around;">
+            <div>
+                <h3>Dulce Ana Vigna Coronel </h3>
+            </div>
+            <div>
+                <h3>Centro de Educacion Tecnica Nº30</h3>
+                <picture><img src="logo.png" alt="" width="80px"></picture>
+            </div>
+        </div>
     </footer>
 </body>
 
