--- a/index.html
+++ b/index.html
@@ -23,20 +23,23 @@
             <p>La etiqueta utilizada para definir una fila en una tabla es "th"</p>
             <!--Pregunta 3-->
             <h2 id="p3">¿Cuál es la etiqueta utilizada para crear una celda de encabezado en una tabla?</h2>
-            <p>f</p>
+            <p>La etiqueta que se utiliza para crear una celda de encabezado en una tabla es "th"</p>
             <!--Pregunta 4-->
             <h2 id="p4">¿Cuál es la etiqueta utilizada para crear una celda de datos en una tabla?</h2>
-            <p>f</p>
+            <p>La etiqueta que se utiliza para crear una celda de datos en una tabla es "td"</p>
             <!--Pregunta 5-->
             <h2 id="p5">¿Qué atributo se utiliza para especificar cuántas columnas debe abarcar una celda?</h2>
-            <p>f</p>
+            <p>El atributo que se utiliza para especificar cuantas columnas debe abarcar una celda es"colspan"</p>
             <!--Pregunta 6-->
             <h2 id="p6">¿Qué atributo se utiliza para especificar cuántas filas debe abarcar una celda?</h2>
-            <p>f</p>
+            <p>El atributo que se utiliza para especificar cuantas filas debe abarcar una celda es "rowspan"</p>
             <!--Pregunta 7-->
             <h2 id="p7">Si necesitamos crear una tabla con 10 filas ¿qué etiqueta y cuántas veces se debe utilizar para
                 definir las filas?</h2>
-            <p>tr</p>
+            <p>Primero comenzamos con la etiqueta "table", lugo utilizamos la etiqueta "tr" diez veces</p>
+            <p>"table"
+                <br>"tr""th""tr"<br>"tr""td""th"<br>"tr""td""th"<br>"tr""td""th"<br>"tr""td""th"<br>"tr""td""th"<br>"tr""td""th"<br>"tr""td""th"<br>"tr""td""th"<br>"tr""td""th"<br>"table"
+            </p>
         </main>
         <aside>
             <ul>
